--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = openreferee-reference-server
+name = openreferee-jacow
 version = attr: openreferee_server.__version__
-url = https://github.com/indico/openreferee
+url = https://github.com/indico/openreferee-jacow
 author = Indico Team
 author_email = indico-team@cern.ch
 license = MIT
-description = OpenReferee Reference Server
+description = OpenReferee JACoW
 long_description = file: README.md
 long_description_content_type = text/markdown; charset=UTF-8; variant=CommonMark
 
@@ -36,6 +36,7 @@ dev =
   python-dotenv
   ipython
   flask-shell-ipython
+  wheel
 
 [flake8]
 exclude=__pycache__
