--- a/setup.cfg
+++ b/setup.cfg
@@ -15,28 +15,10 @@ packages = find:
 python_requires = >= 3.7
 zip_safe = False
 include_package_data = True
-install_requires =
-  werkzeug
-  flask
-  flask-sqlalchemy
-  requests
-  sqlalchemy[postgresql]
-  webargs
-  psycopg2
-  apispec[yaml]
-  apispec-webframeworks
-  pyPDF2
+install_requires = file: requirements.txt
 
 [options.extras_require]
-dev =
-  black
-  flake8
-  flask-cors
-  isort
-  python-dotenv
-  ipython
-  flask-shell-ipython
-  wheel
+dev = file: requirements.dev.txt
 
 [flake8]
 exclude=__pycache__
