--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,8 +1,2 @@
 [isort]
-multi_line_output=3
-include_trailing_comma=True
-force_grid_wrap=0
-use_parentheses=True
-line_length=88
-lines_after_imports=2
-not_skip=__init__.py
+profile=black
