Add notification for third party services

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ FLASK_ENV=development
 FLASK_DEBUG=1
 FLASK_APP=openreferee_server.app
 DATABASE_URI = 'postgresql:///openreferee'
+NOTIFY_URL=
+NOTIFY_TOKEN=
